# internal/models/dto.go
@@ -1,9 +1,11 @@
 package models
 
 type CreateChefRequest struct {
-	Username string `json:"username" binding:"required,min=3"`
-	Password string `json:"password" binding:"required,min=8"`
-	Email    string `json:"email" binding:"required,email"`
+	Username  string `json:"username" binding:"required,min=3"`
+	Password  string `json:"password" binding:"required,min=8"`
+	Email     string `json:"email" binding:"required,email"`
+	FirstName string `json:"first_name" binding:"required"`
+	LastName  string `json:"last_name" binding:"required"`
 }
 
 type UpdateChefRequest struct {
